JumpScript/tests/baselines/reference/parserRegularExpressionDivideAmbiguity2.errors.txt
tests/cases/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity2.jump(1,6): error TS2304: Cannot find name 'notregexp'.
tests/cases/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity2.jump(1,16): error TS2304: Cannot find name 'a'.


==== tests/cases/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity2.jump (2 errors) ====
    (1) /notregexp/a.foo();
         ~~~~~~~~~
!!! error TS2304: Cannot find name 'notregexp'.
                   ~
!!! error TS2304: Cannot find name 'a'.